Adiciona estilização ao projeto

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <meta robots = "index,follow">
      
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
       <div class="container">
+        <h1>JSON API - Consumo de rotas</h1>
+
         <!-- Seleção de rota -->
         <label for="routes">Escolha uma rota da API</label>
         <select id="routes" name="routes">
@@ -35,6 +37,6 @@
         </div>
     </div>
 
-    <script src="script.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
 </body>
 </html>
