Adiciona funções para obter e renderizar comentários da API

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta title="JSON API - Learn">
     <meta description = "Website construído para estudo de consumo de api, uso de métodos, e tratativas de retornos">
     <meta robots = "index,follow">
-     
-
+    <link rel="canonical" href="https://jsonplaceholder-api-estudo.vercel.app/"/>
+    <!-- google tag manager -->
+    <meta name="google-site-verification" content="zdeefwNrpCNJnFzDL-CT3o3P9mp7Gv8VTRfcey4MIyY" />
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
