Adiciona funções para obter e renderizar usuários da API

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <select id="routes" name="routes">
             <option value="posts">Posts</option>
             <option value="comments">Comentários</option>
-            <option value="photos">Fotos</option>
+            <option value="users">Usuários</option>
         </select>
 
         <!-- Botões de busca -->
