Adiciona funções para buscar e renderizar posts, comentários e usuários da API

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js" defer></script>
+    <script src="assets/js/requestAll.js" defer></script>
+    <script src="assets/js/personRequest.js" defer></script>
 </body>
 </html>
